--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "typescript": "5.6.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.12"
   }
 }
