--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "5.6.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.12"
