--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.12",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-icons": "^5.3.0",
     "typescript": "5.6.2"
   },
   "devDependencies": {
