--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.3.0",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.12",
+    "gray-matter": "^4.0.3",
     "next": "14.2.12",
     "react": "18.3.1",
     "react-dom": "18.3.1",
