--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "typescript": "5.6.2"
   },
   "devDependencies": {
