--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.12",
     "next": "14.2.12",
+    "next-mdx-remote": "^5.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
