--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rehype-autolink-headings": "^7.1.0",
     "rehype-highlight": "^7.0.0",
     "rehype-slug": "^6.0.0",
+    "sharp": "^0.33.5",
     "typescript": "5.6.2"
   },
   "devDependencies": {
