--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@types/node": "22.5.5",
@@ -17,6 +18,7 @@
     "highlight.js": "^11.10.0",
     "next": "14.2.12",
     "next-mdx-remote": "^5.0.0",
+    "next-sitemap": "^4.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
